Html file update from the local repositry
to check  the  local repository from the remote repository

--- a/test.html
+++ b/test.html
@@ -13,5 +13,6 @@
     <div>this is another content</div>
     <div>this is another content this is edited</div>
     <div>this is a first chnage in aa</div>
+     <h1>This is change from the git hub repository</h1>
 </body>
 </html>
