another file uploaded updated

--- a/another_table.html
+++ b/another_table.html
@@ -15,6 +15,12 @@
                     <th>name</th>
                     <th>name</th>
                 </thead>
+                <tr>
+                    <td>
+                        girma
+                    </td>
+                    <td>addisu</td>
+                </tr>
             </tbody>
             <tfoot>
 
