the change from the devteam1 branch

--- a/another_table.html
+++ b/another_table.html
@@ -27,5 +27,8 @@
             </tfoot>
         </table>
     </div>
+    <div>
+        this is a change from the  the devteam1 branch
+    </div>i
 </body>
 </html>
