--- a/another_table.html
+++ b/another_table.html
@@ -27,5 +27,9 @@
             </tfoot>
         </table>
     </div>
+    <h1>Change from the main</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae odit, quidem, 
+        quaerat impedit iusto eaque molestiae distinctio beatae alias,
+         natus accusantium adipisci reiciendis suscipit cupiditate mollitia obcaecati accusamus quas voluptas?</p>
 </body>
 </html>
