change from the the main to the techteam branch ended

--- a/another_table.html
+++ b/another_table.html
@@ -34,5 +34,6 @@
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae odit, quidem, 
         quaerat impedit iusto eaque molestiae distinctio beatae alias,
          natus accusantium adipisci reiciendis suscipit cupiditate mollitia obcaecati accusamus quas voluptas?</p>
+         <p>another change from the  main to the techteam branch</p>
 </body>
 </html>
