additional line added from the tech team for rebase

--- a/another_table.html
+++ b/another_table.html
@@ -35,5 +35,6 @@
         quaerat impedit iusto eaque molestiae distinctio beatae alias,
          natus accusantium adipisci reiciendis suscipit cupiditate mollitia obcaecati accusamus quas voluptas?</p>
          <p>another change from the  main to the techteam branch</p>
+         <p>this is also change fro the techteam branch  to the main branch</p>
 </body>
 </html>
