changes from techteam1 branch by adding two paragraphs

--- a/another_table.html
+++ b/another_table.html
@@ -30,5 +30,7 @@
     <div>
         this is a change from the  the devteam1 branch
     </div>i
+    <p>this is the first line from the techteam1</p>
+    <p>this is the second line from the techteam1</p>
 </body>
 </html>
